# Razz

./: .gitignore  Cargo.toml  README.md
RazzArduino/: Makefile  RazzArduino.cpp
RazzArduino/src/decoder/: decoder.hpp
RazzArduino/src/render/: renderer.cpp  renderer.hpp
RazzPico/: Cargo.toml  build.rs
RazzPico/.cargo/: config.toml
RazzPico/src/: lib.rs  main.rs
RazzPico/src/networking/: ip.rs  mod.rs  mqtt.rs  wifi.rs
RazzPico/src/render/: mod.rs  renderer.rs
RazzTFTRender/: Makefile  RazzTFTRender.cpp
RazzTFTRender/src/decoder/: decoder.cpp  decoder.hpp  frame.hpp
RazzTFTRender/src/render/: renderer.cpp  renderer.hpp
src/: lib.rs  main.rs
src/cli/: cli.rs  mod.rs
src/geometry/: camera.rs  hittable.rs  mod.rs  sample.rs  sphere.rs  viewport.rs
src/material/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/math/: img_utils.rs  interval.rs  mod.rs  ray.rs  vec3.rs
src/output/: arduino.rs  mod.rs  ppm.rs
src/output/encoder/: frame.rs  mod.rs
src/output/encoding/: frame.rs  mod.rs
src/render/: image.rs  mod.rs  ppm.rs  renderer.rs
src/scene/: camera.rs  interval.rs  mod.rs  sample.rs  world.rs
