[package]
name = "razz"
version = "0.1.0"
edition = "2024"
authors = ["Jason Phan"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
crc = "3.4.0"
owo-colors = "4.2.3"
rand = "0.9.2"
rayon = "1.11.0"
rumqttc = "0.25.1"
serialport = "4.8.1"
tokio = { version = "1.49.0", features = ["full"] }

