[package]
name = "razzpico"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.2"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2"
portable-atomic = { version = "1", features = ["critical-section"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"
fugit = "0.3.9"
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"

[package.metadata.rust-analyzer]
rustc_source = "discover"
