[package]
name = "razzpico"
version = "0.1.0"
edition = "2024"
authors = ["Jason Phan"]

[dependencies]
embassy-sync = { version = "0.7.2" }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.8.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
cyw43 = { version = "0.6.0", features = ["firmware-logs"] }
cyw43-pio = { version = "0.9.0" }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
embedded-hal = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
heapless = "0.9"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-graphics = "0.8.1"
mipidsi = "0.10.0"
panic-halt = "0.2"
cyw43-firmware = { version = "0.1", features = ["wifi"] }
rust-mqtt = { version = "0.3", default-features = false, features = ["no_std"] }

[package.metadata.rust-analyzer]
rustc_source = "discover"

[build-dependencies]
dotenvy = "0.15.7"
